<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.sedattr.deluxeauctions</groupId>
    <artifactId>DeluxeAuctions</artifactId>
    <version>3</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.14.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>net.wesjd.anvilgui</pattern>
                            <shadedPattern>me.sedattr.deluxeauctions.anvilgui</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.rapha149.signgui</pattern>
                            <shadedPattern>me.sedattr.deluxeauctions.signgui</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludeDefaults>false</excludeDefaults>
                            <includes>
                                <include>net/wesjd/anvilgui/**</include>
                            </includes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>nightexpress-releases</id>
            <url>https://repo.nightexpressdev.com/releases</url>
        </repository>

        <repository>
            <id>skript-releases</id>
            <url>https://repo.skriptlang.org/releases</url>
        </repository>

        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>techscode</id>
            <url>https://repo.techscode.com/repository/techscode-apis/</url>
        </repository>

        <repository>
            <id>auxilor-repo</id>
            <url>https://repo.auxilor.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>

        <repository>
            <id>confuser-repo</id>
            <url>https://ci.frostcast.net/plugin/repository/everything</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>su.nightexpress.coinsengine</groupId>
            <artifactId>CoinsEngine</artifactId>
            <version>2.5.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.SkriptLang</groupId>
            <artifactId>Skript</artifactId>
            <version>2.12.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>1.20.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.8-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.arcaniax</groupId>
            <artifactId>HeadDatabase-API</artifactId>
            <version>1.3.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>de.rapha149.signgui</groupId>
            <artifactId>signgui</artifactId>
            <version>2.5.4</version>
        </dependency>

        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>EcoItems</artifactId>
            <version>5.59.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>eco</artifactId>
            <version>6.74.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.objecthunter</groupId>
            <artifactId>exp4j</artifactId>
            <version>0.4.8</version>
        </dependency>

        <dependency>
            <groupId>com.github.angeschossen</groupId>
            <artifactId>LandsAPI</artifactId>
            <version>7.10.13</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.gitlab.ruany</groupId>
            <artifactId>LiteBansAPI</artifactId>
            <version>0.5.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.DevLeoko</groupId>
            <artifactId>AdvancedBan</artifactId>
            <version>v2.3.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.TechsCode</groupId>
            <artifactId>UltraEconomyAPI</artifactId>
            <version>1.1.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.confuser.banmanager</groupId>
            <artifactId>BanManagerBukkit</artifactId>
            <version>7.9.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>libreforge</artifactId>
            <version>4.73.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/libreforge.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>fr.maxlego08.zauctionhouse</groupId>
            <artifactId>zAuctionHouseV3</artifactId>
            <version>3.2.1.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/zAuctionHouse.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.edwardbelt.edprison</groupId>
            <artifactId>EdPrison</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/EdPrison.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.black_ixx</groupId>
            <artifactId>playerpoints</artifactId>
            <version>3.3.0</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>me.realized</groupId>
            <artifactId>tokenmanager</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/TokenManager.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>me.sedattr.deluxeauctionsredis</groupId>
            <artifactId>deluxeauctionsredis</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/DeluxeAuctionsRedis.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>me.qKing12.RoyaleEconomy</groupId>
            <artifactId>royaleeconomy</artifactId>
            <version>3.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/RoyaleEconomy.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>me.qKing12.AuctionMaster</groupId>
            <artifactId>auctionmaster</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libraries/AuctionMaster.jar</systemPath>
        </dependency>
    </dependencies>
</project>